--- a/index.html
+++ b/index.html
@@ -8,12 +8,24 @@
     <div id="app">
       {{ msg }}
     </div>
+    <div class="" id="app-2">
+      <span v-bind:title="msg">
+        Hover!
+      </span>
+    </div>
     <script src="js/vue.js"></script>
     <script>
       var app = new Vue({
         el: '#app',
         data: {
           msg: 'test'
+        },
+      });
+
+      var app2 = new Vue({
+        el: '#app-2',
+        data: {
+          msg: 'You' + new Date(),
         },
       });
     </script>
